Exclude bin/nessana_old from analysis
This is historical code and doesn't need to get updated; it's not part
of the actual Gem.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
     - '**/Rakefile'
   Exclude:
     - '.git/**/*'
+    - 'bin/nessana_old' # Intentionally hacksy; no need to worry about this
   # Default formatter will be used if no `-f/--format` option is given.
   DefaultFormatter: progress
   # Cop names are displayed in offense messages by default. Change behavior
