Disable Layout/IndentHeredoc cop
We don't need this, and it doesn't make much sense.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ AllCops:
   Exclude:
     - 'bin/nessana_old'
 
+Layout/IndentHeredoc:
+  Enabled: false
+
 Layout/IndentationWidth:
   Enabled: false
 
