--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,5 @@ rvm:
   - 2.5.1
   - 2.6.0-preview2
 
-#before_script:
-#  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-#  - chmod +x ./cc-test-reporter
-#  - ./cc-test-reporter before-build
-#  - gem install bundler
-#  - bundle install
-
 script:
-#  - bundle exec rspec
-  - true
-
-#after_script:
-#  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - bundle exec rspec
