RuboCop: Tweak some styles
Signed-off-by: Kristofer Rye <kristofer.rye@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,3 +18,20 @@ Layout/MultilineOperationIndentation:
 
 Layout/AccessModifierIndentation:
   Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Style/ClassAndModuleChildren:
+  EnforcedStyle: compact
+
+Style/FrozenStringLiteralComment:
+  EnforcedStyle: never
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+
+Metrics/LineLength:
+  Exclude:
+    - 'spec/**/*'
